# rom-browser

./: .gitignore  README.md  setup.sh
config/: app_config.json  game_directories.conf  gamebrain_config.json  rom-filter.txt  screenscraper_config.json
docs/: README.md
gui/: README.md  index.html  package-lock.json  package.json  run_npm.bat  setup.sh  start_gui.sh  test-browser.html  vite.config.ts
gui/backend/: app.py
gui/frontend/static/css/: style.css
gui/frontend/static/js/: app.js
gui/frontend/templates/: index.html
gui/src/: App.css  App.tsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
gui/src/components/: GameBrowser.tsx  Header.tsx  MyLibrary.tsx  MyrientBrowser.tsx  Navigation.tsx  PlatformSidebar.tsx  Settings.tsx
scripts/: download-ps2.sh  move-configs.sh  rom-browse-fixed.sh  rom-browse-v1.sh  rom-browse.sh  rom-files.sh
scripts-rust/: Cargo.toml
scripts-rust/src/: lib.rs
scripts/game-management/: custom_ratings_manager.py  game_name_resolver.py  smart_metadata_downloader.py
scripts/rom-sourcing/: rom-download.sh  rom_browser.py  rom_downloader.py  rom_files.py
scripts/shortcuts/: create_game_shortcuts.py  create_rom_shortcuts.py  create_shortcuts_config.py  create_shortcuts_single.py
